# MedVoice

./: .coverage  pyproject.toml  start.bat  start.ps1
.claude/: settings.local.json
backend/: .env.example  __init__.py
backend/app/: __init__.py  config.py  demo_bot.py  main.py
backend/app/models/: __init__.py  intake.py  messages.py
backend/app/routes/: __init__.py  chat.py  sessions.py  voice.py
backend/app/services/: __init__.py  bot_runner.py  intake.py  intake_extractor.py  llm.py  session_store.py  transcription.py
backend/app/voice/: __init__.py  context.py  pipeline.py  pipeline_flow.py  processors.py  room.py  runner.py  stt.py  transport.py  tts.py  vad.py
backend/app/voice/llm/: __init__.py  prompts.py  service.py
backend/tests/: VOICE_TESTS_SUMMARY.md  conftest.py
backend/tests/voice/: test_context.py  test_llm_service.py  test_prompts.py  test_room.py  test_stt_service.py  test_transport.py  test_tts_service.py  test_vad.py
docs/: code_base.md  learning_plan.md  plan.md  wsl_commands.md
docs/phases/phase1-backend-api/: README.md
docs/phases/phase2-voice-pipeline/: README.md
docs/phases/phase3-frontend/: README.md
docs/phases/phase4-polish/: README.md
