[project]
name = "medvoice"
version = "0.1.0"
description = "AI-powered voice agent for medical patient intake"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Voice pipeline
    "pipecat-ai[daily,deepgram,google,silero]>=0.0.28",
    # LLM
    "google-generativeai>=0.3.0",
    # STT/TTS
    "deepgram-sdk>=3.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "loguru>=0.7.3",
    "aiohttp>=3.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
